--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Nathanael Metke</title>
   </head>
   <body>
-    Hello World!
+    <img src="https://avatars1.githubusercontent.com/u/8667815?v=3&s=460" />
+
   </body>
 </html>
