Deleted everything, don't freak out

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Nathanael Metke</title>
+    <link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="./css/master.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
-    <img src="https://avatars1.githubusercontent.com/u/8667815?v=3&s=460" />
-
+    <div class="title">Nathanael M</div>
+    <img class="background" src="background.jpg" />
   </body>
 </html>
