--- a/index.html
+++ b/index.html
@@ -48,9 +48,6 @@
                 <li class="page-scroll">
                     <a href="#about">About</a>
                 </li>
-                <li class="page-scroll">
-                    <a href="#contact">Contact</a>
-                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -148,7 +145,7 @@
         </div>
     </div>
   -->
-  <span class="protfolio-placeholder">Nothing important here yet, Check out my Github for now!</span>
+  <div class="portfolio-placeholder">Nothing important here yet, Check out my Github for now!</div>
 </section>
 
 <!-- About Section -->
@@ -162,10 +159,10 @@
         </div>
         <div class="row">
             <div class="col-lg-4 col-lg-offset-2">
-                <p></p>
+                <p>Hey! My name is Nathanael Metke, and I am a programmer who is constantly trying to improve and sdvance my skills in many areas. </p>
             </div>
             <div class="col-lg-4">
-                <p></p>
+                <p>I will be updating this site to all of my major and interesting project pages, so that I and others can see my works. Like a programming art gallery... or something.</p>
             </div>
 
     </div>
@@ -186,13 +183,13 @@
                     <h3>I might be on social media!</h3>
                     <ul class="list-inline">
                         <li>
-                            <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/nathanael.metke" class="social-btn"><i class="fa fa-fw fa-facebook fa-2x"></i></a>
                         </li>
                         <li>
-                            <a href="#" class=""><i class="fa fa-fw fa-google-plus"></i></a>
+                            <a href="https://plus.google.com/103629041168926400038" class="social-btn"><i class="fa fa-fw fa-google-plus fa-2x"></i></a>
                         </li>
                         <li>
-                            <a href="#" class=""><i class="fa fa-fw fa-twitter"></i></a>
+                            <a href="twitter.com/tabs_not_spaces" class="social-btn"><i class="fa fa-fw fa-twitter fa-2x"></i></a>
                         </li>
                     </ul>
                 </div>
