I should learn to spell
Fixing spelling errors

--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
         </div>
         <div class="row">
             <div class="col-lg-4 col-lg-offset-2">
-                <p>Hey! My name is Nathanael Metke, and I am a programmer who is constantly trying to improve and sdvance my skills in many areas. </p>
+                <p>Hey! My name is Nathanael Metke, and I am a programmer who is constantly trying to improve and advance my skills in many areas. </p>
             </div>
             <div class="col-lg-4">
-                <p>I will be updating this site to all of my major and interesting project pages, so that I and others can see my works. Like a programming art gallery... or something.</p>
+                <p>I will be updating this site for all of my major and interesting project pages, so that I and others can see my works. Like a programming art gallery... or something.</p>
             </div>
 
     </div>
