Nothing works, but made it a bit more informational

--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<h1>Placeholder</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Nathanael Metke</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" media="screen" href="./static/css/main.css" />
+    
+</head>
+<body>
+    <div class="flex column">
+        <h1>Nathanel Metke</h1>
+        <h3>A home for my projects, and a place to vent</h3>
+        <div class="flex row">
+                <h5 class="row-obj"><a href="/blog">Blog</a></h5>
+                <h5 class="row-obj"><a href="/projects">Projects</a></h5>
+        </div>
+    </div>
+    
+    <script src="./static/js/main.js"></script>
+</body>
+</html>
