Just adding more placeholder stuff

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 </head>
 <body>
     <div class="flex column">
+        <img src="static/me.jpeg">
         <h1>Nathanel Metke</h1>
-        <h3>A home for my projects, and a place to vent</h3>
+        <h3>I do lots of things.</h3>
         <div class="flex row">
-                <h5 class="row-obj"><a href="/blog">Blog</a></h5>
-                <h5 class="row-obj"><a href="/projects">Projects</a></h5>
+                <h5 class="row-obj"><a href="mailto://nqmetke@gmail.com">Contact me here</a></h5>
         </div>
+        <h5>🚧 Im adding more stuff here later 🚧</h5>
     </div>
     
     <script src="./static/js/main.js"></script>
