--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
     <div class="flex column">
         <img src="static/me.jpeg">
         <h1>Nathanel Metke</h1>
-        <h3>I do lots of things.</h3>
+        <h3>Full Stack Developer, Robot Programmer, Computer Engineering Student</h3>
         <div class="flex row">
-                <h5 class="row-obj"><a href="mailto://nqmetke@gmail.com">Contact me here</a></h5>
+                <h5 class="row-obj"><a href="mailto://nathanael.metke@gmail.com">Contact me here</a></h5>
+        </div>
+
+        <div class="flex row">
+                <h5 class='row-obj'><a href="https://www.linkedin.com/in/nathanael-metke">LinkedIn</a></h5>
         </div>
         <h5>Scroll Down for more</h5>
     </div>
